src/test/compile-fail/cap-clause-use-after-move.rs
fn main() {
    let x = 5;
    let _y = fn~(move x) { };
    let _z = x; //~ ERROR use of moved variable: `x`
}
